--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
 
     - name: Build HandBrake Linux
       run: |
+        git submodule update --init --recursive
         mkdir build
         cd build
         cmake ..
