--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
       run: |
         git submodule init && git submodule update
         sudo -S ./configure
-        make -C build
-        make -C build install
+        sudo -S make -C build
+        sudo -S make -C build install
